--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -57,6 +57,19 @@ body {
     background-color: rgba(255,255,255,0.8);
 }
 
+.btn-circle {
+    border-radius: 50%;
+    color: #333;
+    background-color: rgb(255,255,255);
+    padding: 0px;
+    margin: 0px;
+}
+
+.btn-circle:hover {
+    color: #333;
+    background-color: rgba(255,255,255,0.8);
+}
+
 /* Custom Horizontal Rule */
 
 hr.small {
